tab layout bug fix

--- a/src/main/resources/public/css/meta64.scss
+++ b/src/main/resources/public/css/meta64.scss
@@ -766,10 +766,6 @@ entire thing down some times, if it's jutting up against something */
     margin-top: 8px;
 }
 
-.tab-content-mobile {
-    margin-right: 0px;
-}
-
 .ipfsCidText {
     cursor: pointer;
 }
